Showing debug info

--- a/Vanilla/Web.config
+++ b/Vanilla/Web.config
@@ -10,6 +10,7 @@
 
 	<system.web>
 
+		<customErrors mode="Off" />
 		<httpRuntime targetFramework="4.5" />
 
 		<compilation debug="true" targetFramework="4.5" />
